<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CCCCCC"
    android:orientation="vertical"
    android:paddingTop="1dp" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="5dp"
        android:text="@string/add_expense_category"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="30dp"
            android:text="@string/expensecategory"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/catName"
            android:background="@drawable/edit_text_design"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView2"
            android:layout_below="@+id/textView2"
            android:ems="10"
            android:singleLine="true"
            android:hint="@string/add_expense_category">

            <requestFocus />
        </EditText>
        <Button
            android:id="@+id/btnadd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/catName"
            android:layout_below="@+id/catName"
            android:layout_marginTop="32dp"
            android:text="@string/save"
            android:onClick="onClick"
            android:background="@color/btn_logut_bg"
            android:textColor="@color/windowBackground"/>
        <Button
            android:layout_marginLeft="10dp"
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/catName"
            android:layout_toRightOf="@+id/btnadd"
            android:layout_marginTop="32dp"
            android:text="@string/cancel"
            android:onClick="onClick"
            android:background="@color/btn_logut_bg"
            android:textColor="@color/windowBackground"/>

        <ListView
            android:id="@android:id/list"
            android:layout_below="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true">
        </ListView>

    </RelativeLayout>

</LinearLayout>